Refactor index.html for better formatting
Refactor HTML for improved readability and structure.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <meta name="theme-color" content="#000000">
 
     <link rel="stylesheet" href="styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet">
   </head>
 
   <body>
@@ -19,7 +22,12 @@
     <header class="siteHeader">
       <div class="container navWrap">
         <div class="brand">
-          <img src="assets/logo.png" alt="CaptionArşiv logo" class="brandLogo" width="40" height="40">
+          <img
+            src="assets/logo.png"
+            alt="CaptionArşiv logo"
+            class="brandLogo"
+            width="40"
+            height="40">
           <span class="brandName">CaptionArşiv</span>
         </div>
 
@@ -33,11 +41,14 @@
     </header>
 
     <main id="mainContent">
+      <!-- HERO -->
       <section class="hero">
         <div class="container heroGrid">
           <div class="heroText">
             <p class="eyebrow reveal" style="--delay: 0.1s;">Kişisel Mobil Arşiv</p>
-            <h1 class="reveal" style="--delay: 0.2s;">Favori içeriklerin için tek kasa.</h1>
+            <h1 class="reveal" style="--delay: 0.2s;">
+              Favori içeriklerin için tek kasa.
+            </h1>
             <p class="lead reveal" style="--delay: 0.3s;">
               Twitter/X bağlantılarını tek yerde topla, etiketlerle düzenle.
               İstersen gizli gönderi seçeneğiyle sadece kendine sakla.
@@ -45,19 +56,19 @@
 
             <div class="ctaRow reveal" style="--delay: 0.4s;">
               <div class="storeButtons" aria-label="Mağaza bağlantıları">
-                <!-- Google Play: şimdilik yayında değil -->
-                <a class="storeBtn storeBtn--google js-not-available"
-                   href="#"
-                   aria-disabled="true"
-                   data-store="googleplay">
+                <a
+                  class="storeBtn storeBtn--google js-not-available"
+                  href="#"
+                  aria-disabled="true"
+                  data-store="googleplay">
                   <img src="assets/store-google-play.svg" alt="Google Play'den indir">
                 </a>
 
-                <!-- App Store: şimdilik yayında değil -->
-                <a class="storeBtn storeBtn--appstore js-not-available"
-                   href="#"
-                   aria-disabled="true"
-                   data-store="appstore">
+                <a
+                  class="storeBtn storeBtn--appstore js-not-available"
+                  href="#"
+                  aria-disabled="true"
+                  data-store="appstore">
                   <img src="assets/store-app-store.svg" alt="App Store'dan indir">
                 </a>
               </div>
@@ -76,56 +87,74 @@
         </div>
       </section>
 
+      <!-- FEATURES -->
       <section class="section features">
         <div class="container">
           <div class="sectionHead">
             <p class="eyebrow">Özellikler</p>
             <h2>Kaybetme, Arşivle.</h2>
-            <p class="sectionNote">Sadece linki yapıştır ve gerisini CaptionArşiv'e bırak.</p>
+            <p class="sectionNote">
+              Sadece linki yapıştır ve gerisini CaptionArşiv'e bırak.
+            </p>
           </div>
 
           <div class="featureGrid">
             <article class="featureCard reveal">
               <div class="iconBox">📂</div>
               <h3>Koleksiyonlar</h3>
-              <p>Özel veya genel koleksiyonlar oluştur. Kapağını seç, arşivini kişiselleştir.</p>
+              <p>
+                Özel veya genel koleksiyonlar oluştur.
+                Kapağını seç, arşivini kişiselleştir.
+              </p>
             </article>
 
             <article class="featureCard reveal">
               <div class="iconBox">🔒</div>
               <h3>Gizli Gönderi</h3>
-              <p>Bazı içerikler sadece senin içindir. Gizli seçeneği ile güvenle sakla.</p>
+              <p>
+                Bazı içerikler sadece senin içindir.
+                Gizli seçeneği ile güvenle sakla.
+              </p>
             </article>
 
             <article class="featureCard reveal">
               <div class="iconBox">🔎</div>
               <h3>Gelişmiş Arama</h3>
-              <p>Etiketler, kategoriler veya kelimelerle aradığın içeriği saniyeler içinde bul.</p>
+              <p>
+                Etiketler, kategoriler veya kelimelerle
+                aradığın içeriği saniyeler içinde bul.
+              </p>
             </article>
           </div>
         </div>
       </section>
 
+      <!-- DOWNLOAD -->
       <section id="download" class="section ctaSection">
         <div class="container ctaCard">
           <div>
             <p class="eyebrow">Hemen Başla</p>
             <h2>Arşivin seni bekliyor.</h2>
-            <p>Yayınlanınca mağazalardan indirip konuk moduyla hemen keşfetmeye başla.</p>
+            <p>
+              Yayınlanınca mağazalardan indirip
+              konuk moduyla hemen keşfetmeye başla.
+            </p>
           </div>
 
           <div class="ctaActions">
-            <a href="#"
-               class="button primary js-not-available"
-               aria-disabled="true"
-               data-store="googleplay">
+            <a
+              href="#"
+              class="button primary js-not-available"
+              aria-disabled="true"
+              data-store="googleplay">
               Google Play Yakında
             </a>
 
-            <a href="#"
-               class="button ghost js-not-available"
-               aria-disabled="true"
-               data-store="appstore">
+            <a
+              href="#"
+              class="button ghost js-not-available"
+              aria-disabled="true"
+              data-store="appstore">
               App Store Yakında
             </a>
 
@@ -135,17 +164,19 @@
           </div>
 
           <div class="storeButtons storeButtons--cta" aria-label="Mağaza bağlantıları (CTA)">
-            <a class="storeBtn storeBtn--google js-not-available"
-               href="#"
-               aria-disabled="true"
-               data-store="googleplay">
+            <a
+              class="storeBtn storeBtn--google js-not-available"
+              href="#"
+              aria-disabled="true"
+              data-store="googleplay">
               <img src="assets/store-google-play.svg" alt="Google Play'den indir">
             </a>
 
-            <a class="storeBtn storeBtn--appstore js-not-available"
-               href="#"
-               aria-disabled="true"
-               data-store="appstore">
+            <a
+              class="storeBtn storeBtn--appstore js-not-available"
+              href="#"
+              aria-disabled="true"
+              data-store="appstore">
               <img src="assets/store-app-store.svg" alt="App Store'dan indir">
             </a>
           </div>
@@ -155,9 +186,7 @@
 
     <footer class="siteFooter">
       <div class="container footerGrid">
-        <div class="copyright">
-          <p>© 2025 CaptionArşiv. Tüm hakları saklıdır.</p>
-        </div>
+        <p>© 2025 CaptionArşiv. Tüm hakları saklıdır.</p>
         <div class="footerLinks">
           <a href="privacy.html">Gizlilik Politikası</a>
           <a href="policy.html">Kullanım &amp; Telif</a>
@@ -166,24 +195,20 @@
       </div>
     </footer>
 
+    <!-- JS -->
     <script>
-      // Mağazalar şimdilik yayında değil: butonlara tıklanınca uyarı göster
-      document.querySelectorAll('.js-not-available').forEach(function (el) {
-        el.addEventListener('click', function (e) {
+      document.querySelectorAll('.js-not-available').forEach(el => {
+        el.addEventListener('click', e => {
           e.preventDefault();
-          var store = (el.getAttribute('data-store') || '').toLowerCase();
 
-          if (store === 'googleplay') {
-            alert('Henüz Google Play’de yayınlanmadı. Yayınlanınca bu buton aktif olacak.');
-            return;
-          }
+          const store = (el.dataset.store || '').toLowerCase();
 
-          if (store === 'appstore') {
-            alert('Henüz App Store’da yayınlanmadı. Yayınlanınca bu buton aktif olacak.');
-            return;
-          }
+          const messages = {
+            googleplay: 'Henüz Google Play’de yayınlanmadı. Yayınlanınca bu buton aktif olacak.',
+            appstore: 'Henüz App Store’da yayınlanmadı. Yayınlanınca bu buton aktif olacak.'
+          };
 
-          alert('Henüz yayınlanmadı. Yayınlanınca bu buton aktif olacak.');
+          alert(messages[store] || 'Henüz yayınlanmadı. Yayınlanınca bu buton aktif olacak.');
         });
       });
     </script>
